--- a/css/porjc.css
+++ b/css/porjc.css
@@ -1,9 +1,12 @@
-body {
-    background-color: darkgrey;
-}
+
 h1 {
     color: red;
     font-size: 40px;
     text-align: center;
     padding: 20px;
+}
+img {
+    width: 400px;
+    height: 300px;
+    margin-left: 600px;  
 }
